# QNotepad

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.md  qnotepad.desktop
src/: editor.cpp  editor.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  search.cpp  search.h  searchdialog.ui  version.h
